--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -109,9 +109,6 @@ body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif,
     Segoe UI, Roboto, Helvetica, Arial, sans-serif, Apple Color Emoji,
     Segoe UI Emoji, Segoe UI Symbol;
-  font-weight: 400;
-  line-height: 1.75;
-  color: var(--textColor);
 }
 
 p {
@@ -270,8 +267,10 @@ ul {
   width: 100%;
   height: 100%;
   z-index: -1;
+  object-fit: cover;
 }
 .image-overlay {
+  display: flex;
   position: absolute;
   top: 0;
   left: 0;
@@ -282,6 +281,7 @@ ul {
 }
 .background-container{
   position: relative;
+  flex: 1;
 }
 .Logo-word{
   font-size: 50px;
@@ -300,6 +300,7 @@ ul {
   color: rgb(0, 183, 255);
 }
 .Option-container{
+  flex:0.4;
   width: 700px;
   color: white;
   display: flex;
@@ -320,6 +321,7 @@ ul {
   font-size: 16px;
   transition: background-color 0.3s ease-out;
   margin-left: 10px;
+  max-width: 100%;
 }
 .option-button:hover{
   background-color: rgb(199, 199, 199);
@@ -334,4 +336,85 @@ ul {
   background-color: transparent;
   border: none;
   color: transparent;
+  pointer-events: none;
+}
+.mainPage{
+  display: flex;
+}
+.support-button{
+  position : absolute;
+  background-color: transparent;
+  border: none;
+  color:white;
+  font-size: 3rem;
+  bottom:20px;
+  right:20px;
+  transition: color 0.3s ease-out;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.support-button:hover{
+  color: rgb(0, 0, 0);
+  cursor: pointer;
+}
+.support-text{
+  font-size: 25px;
+  margin-right: 10px;
+}
+
+.home-button{
+  background-color: white;
+  color: rgb(41,118,211);
+  border-color: rgb(41,118,211);
+  border-style: solid;
+  border-width: 1px;
+  color: rgb(41,118,211);
+  padding-left: 16px;
+  padding-bottom: 9px;
+  padding-top: 9px;
+  padding-right: 16px;
+  border-radius: 2px;
+  cursor: pointer;
+  vertical-align: top;
+  margin-right: 8px;
+  font-size: 20px;
+  height: 80px;
+  width: 200px;
+  transition: background-color 0.4s,
+  color 0.4s, width 0.4s,height 0.4s;
+  
+}
+.home-button:hover{
+  color: white;
+  background-color: rgb(41,118,211);
+  width: 300px;
+}
+@media (max-width: 1270px) {
+  .Option-container {
+    width: 100%; 
+    margin: 20px; 
+  }
+}
+@media (max-width: 1270px) {
+  .background-img {
+    width: 100%; 
+    height: 100vh; 
+  }
+}
+
+@media (max-height: 700px) {
+  .sideBar-body {
+    gap:50px;
+  }
+}
+@media (max-height: 600px) {
+  .sideBar-body {
+    gap:30px;
+  }
+}
+@media (max-height: 400px) {
+  .sideBar-body {
+    gap:5px;
+  }
 }
