--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -247,6 +247,7 @@ ul {
   margin-left: 20px;
 }
 .mainPage{
+  display: flex;
   margin-left: 90px;
 }
 .Search-bar{
@@ -338,9 +339,6 @@ ul {
   color: transparent;
   pointer-events: none;
 }
-.mainPage{
-  display: flex;
-}
 .support-button{
   position : absolute;
   background-color: transparent;
@@ -402,7 +400,6 @@ ul {
     height: 100vh; 
   }
 }
-
 @media (max-height: 700px) {
   .sideBar-body {
     gap:50px;
@@ -417,4 +414,318 @@ ul {
   .sideBar-body {
     gap:5px;
   }
+}
+
+.page-transition {
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.page-entering {
+  opacity: 0;
+}
+
+.page-entered {
+  opacity: 1;
+}
+
+.Whole-box{
+  text-align: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  row-gap: 20px;
+  margin: 30px;
+  height: 80%;
+  
+}
+.friend-box{
+  display: inline-block;
+  width: 250px;
+  margin-right: 10px;
+  border: none;
+  border-style: solid;
+  border: 1px solid #dbdada;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+}
+.friend-rec{
+  width: 250px;
+  height: 250px;
+  object-fit: cover;
+}
+.name{
+  font-weight: bold;
+  font-size: 16px;
+}
+.mutual{
+  margin-top: 5px;
+  font-size: 14px;
+}
+.Add-button{
+  margin-top: 15px;
+  margin-left: 5px;
+  margin-bottom: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+  border-radius: 5px;
+  border: none;
+  background-color: rgb(24, 119, 242);
+  color: white;
+}
+.Add-button:hover{
+  box-shadow: 2px 2px 7px rgba(0,0,0,0.3);
+}
+
+.container-textbox{
+  display: inline-block;
+  width:90%;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 15px;
+  padding-right: 15px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.25);
+  border-radius: 4px;
+  margin-top: 30px;
+  text-align: left;
+}
+.right-sec{
+  flex: 1;
+}
+
+  .inbox-label {
+    font-size: 14px;
+    color: rgb(120, 120, 120);
+    margin-bottom: 20px;
+  }
+  
+  .email {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-bottom: 20px;
+  }
+  
+  .sender-picture-container {
+    margin-right: 10px;
+  }
+  
+  .sender-picture {
+    width: 50px;
+    height: 50px;
+    object-fit: cover;
+    border-radius: 25px;
+  }
+  
+  .email-content {
+    flex: 1;
+  }
+  
+  .email-header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 3px;
+  }
+  
+  .sender-name {
+    font-size: 18px;
+    font-weight: bold;
+  }
+  
+  .send-time {
+    font-size: 14px;
+    color: rgb(120, 120, 120);
+  }
+  
+  .subject {
+    font-weight: bold;
+    margin-bottom: 5px;
+    
+  }
+  
+  .message {
+    color: rgb(120, 120, 120);
+  }
+  .container-commu{
+    display: flex;
+  }
+  .deleteFriend-button{
+    background-color: transparent;
+    border: none;
+    color: rgb(24, 119, 242);
+    font-size: 10px;
+    position:absolute;
+    color:red;
+    right:0;
+    top:0px;
+    cursor: pointer;
+  }
+  .message{
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+  }
+  .Chat-button{
+    margin-right: 20px;
+    background-color: rgb(9, 126, 236);
+    color: white;
+    border: none;
+    height: 30px;
+    width: 70px;
+    border-radius: 30px;
+    cursor: pointer;
+    font-weight: bold;
+    cursor: pointer;
+    transition: box-shadow 0.4s, margin-top 0.4s, margin-left 0.4s;
+  }
+  .Chat-button:hover{
+    box-shadow: 2px 2px 7px rgba(0,0,0,0.3);
+  }
+  .Chat-button:active{
+    margin-top: 2px;
+    margin-left: 3px;
+    box-shadow:none;
+  }
+  .singleItem{
+    background-color: var(--white);
+    color: var(--textColor);
+    border-radius: var(--borderRadius);
+    box-shadow: var(--shadow-2);
+    transition:var(--transition);
+    position: relative;
+  }
+  .singleItem:hover{
+    box-shadow: var(--shadow-4);
+  }
+  .singleItem footer{
+  padding: 1rem 1.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.singleItem img{
+  width: 100%;
+  border-top-left-radius: var(--borderRadius);
+  border-top-right-radius: var(--borderRadius);
+}
+
+.like-btn{
+  background-color: transparent;
+  border: transparent;
+  cursor: pointer;
+  outline: none;
+  font-size: 1.5rem;
+  transition: var(--transition);
+  position:absolute;
+  right:20px;
+  bottom: 20px;
+  
+
+}
+
+.like-btn:hover{
+  color: var(--red-dark);
+  transform:translateY(-3px)
+
+}
+.testImg{
+  width: 100%;
+  display: block;
+  object-fit: cover;
+}
+.section-center{
+  padding: 3rem 0;
+  width: var(--view-width);
+  max-width: var(--max-width);
+  margin: 0 auto;
+  display: grid;
+  gap: 2rem;
+  margin-top: 50px;
+}
+@media screen and (min-width: 776px){
+  .section-center{
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media screen and (min-width: 992px){
+  .section-center{
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+.cart-button{
+  background-color: transparent;
+  border: transparent;
+  cursor: pointer;
+  margin-right: 30px;
+  font-size: 60px;
+  
+}
+.cart-button:hover{
+  border: 2px solid var(--grey-900);
+
+}
+.cart-quantity{
+  display: inline-block;
+  font-size: 30px;
+}
+.store-header{
+  display: flex;
+  justify-content: space-between;
+  position:fixed;
+  z-index: 1;
+  top:0;
+  right: 0;
+  background-color: var(--grey-300);
+  
+}
+.header-text{
+  margin-left: 20px;
+}
+.item-div{
+  text-align: start;
+  margin-left: 20px;
+  padding-left: 10px;
+  background-color: white;
+  border: 1px solid rgb(190, 189, 189);
+  border-radius: 4px;
+  margin-bottom: 10px;
+}
+.checkOut-div{
+  display: flex;
+  
+}
+.calculate-price{
+
+  padding-right: 50px;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  padding-left: 10px;
+  text-align: start;
+  position: fixed;
+  right: 50px;
+  top:50px
+}
+.item-display{
+
+flex: 0.5;
+}
+.Unit-price-div{
+  display: flex;
+  justify-content: space-between;
+}
+.cart-delete-button{
+    background-color: darkred;
+    color: white;
+    border: none;
+    font-size: 15px;
+    cursor: pointer;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-right: 10px;
+    padding: 10px;
 }
