--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -275,12 +275,38 @@ ul {
 .image-overlay {
   display: flex;
   position: absolute;
+  justify-content: space-between;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background: linear-gradient(to right, rgba(0, 0, 0, 0.7), transparent);
   z-index: 1; /* Add z-index to place the overlay above the image */
+}
+
+.user-profile{
+  background-color: white;
+  padding: 20px 40px;
+  height: 32vh;
+  margin-top: 10%;
+  margin-right: 100px;
+  border-radius: 5px;
+  border: 1px solid #dbdada;
+}
+@media (min-height: 1100px) {
+  .user-profile{
+    height: 25vh;
+  }
+
+
+}
+.user-profile-pic{
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
 }
 .background-container{
   position: relative;
@@ -303,8 +329,7 @@ ul {
   color: rgb(0, 183, 255);
 }
 .Option-container{
-  flex:0.4;
-  width: 700px;
+  flex:0.55;
   color: white;
   display: flex;
   margin-top: 100px;
@@ -312,16 +337,16 @@ ul {
   flex-direction: column;
 }
 .option-button{
-  margin-top: 30px;
+  margin-top: 50px;
   display: flex;
   justify-content: left;
   align-items: center;
-  padding: 20px 20px;
+  padding: 25px 20px;
   border-radius: 30px;
   border: none;
   font-family: Arial;
   font-weight: 700;
-  font-size: 16px;
+  font-size: 20px;
   transition: background-color 0.3s ease-out;
   margin-left: 10px;
   max-width: 100%;
