--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -287,7 +287,7 @@ ul {
 .user-profile{
   background-color: white;
   padding: 20px 40px;
-  height: 32vh;
+  height: 39vh;
   margin-top: 10%;
   margin-right: 100px;
   border-radius: 5px;
@@ -295,7 +295,7 @@ ul {
 }
 @media (min-height: 1100px) {
   .user-profile{
-    height: 25vh;
+    height: 30vh;
   }
 
 
@@ -616,9 +616,7 @@ ul {
     box-shadow: 2px 2px 7px rgba(0,0,0,0.3);
   }
   .Chat-button:active{
-    margin-top: 2px;
-    margin-left: 3px;
-    box-shadow:none;
+    opacity: 0.8;
   }
   .singleItem{
     background-color: var(--white);
@@ -883,4 +881,22 @@ flex: 0.5;
 .Goals-div,
 .Finished-Goals-div{
   margin-top: 20px;
+}
+.place-order-button{
+  width: 100%;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  border-radius: 8px;
+  margin-top: 20px;
+  margin-bottom: 19px;
+  color: rgb(33, 33, 33);
+  background-color: rgb(255, 216, 20);
+  border: 1px solid rgb(252, 210, 0);
+  border-radius: 8px;
+  cursor: pointer;
+  box-shadow: 0 2px 5px rgba(213, 217, 217, 0.5);
+}
+.place-order-button:hover{
+  background-color: rgb(248, 207, 4);
+  border: 1px solid rgb(252, 210, 0);
 }
